refactor source code and add example

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,8 +1,9 @@
 # Server settings environment
-NODE_SERVER_PORT=8080
+NODE_SERVER_PORT=insert_node_server_port_to_listening_here
 
 
 # MySQL settings environment
+MYSQL_SERVER_HOST=localhost
 MYSQL_SERVER_USER=insert_db_user_here
 MYSQL_SERVER_PASSWORD=insert_db_pw_here
 MYSQL_SERVER_DATABASE_NAME=insert_db_name_here
