--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,9 +1,11 @@
 # Server settings environment
-NODE_SERVER_PORT=insert_node_server_port_to_listening_here
-
+NODE_SERVER_PORT=8080
 
 # MySQL settings environment
 MYSQL_SERVER_HOST=localhost
-MYSQL_SERVER_USER=insert_db_user_here
-MYSQL_SERVER_PASSWORD=insert_db_pw_here
-MYSQL_SERVER_DATABASE_NAME=insert_db_name_here
+MYSQL_SERVER_USER=root
+MYSQL_SERVER_PASSWORD=12345678
+MYSQL_SERVER_DATABASE=coffee_shop
+
+# TOKEN settings environment
+ACCESS_TOKEN_SECRET=you_are_my_apple
