--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,15 @@
   "author": "Tri Mai-Quoc, Nhan Tran-Thien, Trung Tran-Dac-Thanh",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.5",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "short-unique-id": "^5.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "dotenv": "^16.4.5"
